# ootpisp_4sem

lr4/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  КОМАНДА
lr4/factory/: shape_factory.cpp  shape_factory.h  shape_loader.cpp  shape_loader.h
lr4/shapes/: composite_shape.cpp  composite_shape.h  ellipse.cpp  ellipse.h  polygon.cpp  polygon.h  shape.cpp  shape.h
lr5/: CMakeLists_Shared.txt  main_dynamic.cpp  polygon.h  read.me  shape.cpp  shape.h
